--- a/EmployeeList-FrontEnd/employeee/src/components/MainPage.css
+++ b/EmployeeList-FrontEnd/employeee/src/components/MainPage.css
@@ -86,7 +86,7 @@
 }
 
 .second {
-    margin-top: 100px; /* Adjusted to push content below fixed header */
+    margin-top: 100px; 
     padding: 20px;
     text-align: center;
 }
